fix(core): fixed broken spacings in nav cat-card (#360)
* chore(core): fixed broken spacings in nav cat-card

* chore: cleanup

---------

--- a/core/src/components/cat-card/cat-card.scss
+++ b/core/src/components/cat-card/cat-card.scss
@@ -21,7 +21,7 @@ $-padding: 1.25rem;
 
 ::slotted(nav),
 ::slotted(nav:last-child) {
-  margin: #{$cat-body-margin-bottom * 0.5 - $-padding} #{-$-padding} !important;
+  margin: #{0.25rem - $-padding} #{0.25rem - $-padding} !important;
 }
 
 // --- pull out helper classes
